--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cloudscraper": "^1.4.1",
     "jsonic": "^0.3.0",
+    "moment": "^2.22.1",
     "object-assign": "^4.1.1",
     "request": ">= 2.35.0",
     "signalr-client": "0.0.17"
